# xbrl-taxonomy-package-conformant-processor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYRIGHT  README.md  SECURITY.md  requirements.txt  setup.py
docs/source/: conf.py  contributing.rst  documentation.rst  genindex.rst  support.rst  tips-and-tricks.rst  troubleshooting.rst  usage.rst
src/: app.py
src/_vscode/: launch.json
src/checker/: TPChecker.py
src/classes/: CIPCFixer.py  CMFCLCIFixer.py  EBAFixer.py  EDINETFixer.py  TPChecker.py
src/enums/: Providers.py
src/fixers/: CIPCFixer.py  CMFCLCIFixer.py  EBAFixer.py  EDINETFixer.py  TPFixerInterface.py
src/helpers/: error_handler.py  logger.py  utils.py
src/interfaces/: TPFixerInterface.py
src/modules/: utils.py
tests/: EBAFixerTest.py  EDINETFixerTest.py  TPCheckerTest.py  run_tests.py  test_EBAFixer.py  test_EDINETFixer.py  test_TPChecker.py
xbrl-taxonomy-package-conformant-processor/: CMakeLists.txt
xbrl-taxonomy-package-conformant-processor/includes/: CIPCFixer.hpp  CMFCLCIFixer.hpp  EBAFixer.hpp  EDINETFixer.hpp  Providers.hpp  TPChecker.hpp  TPFixerInterface.hpp  error_handler.hpp  logger.hpp  utils.hpp  xbrl-taxonomy-package-conformant-processor.hpp
xbrl-taxonomy-package-conformant-processor/src/: xbrl-taxonomy-package-conformant-processor.cpp
xbrl-taxonomy-package-conformant-processor/src/checker/: TPChecker.cpp
xbrl-taxonomy-package-conformant-processor/src/fixers/: CIPCFixer.cpp  CMFCLCIFixer.cpp  EBAFixer.cpp  EDINETFixer.cpp  TPFixerInterface.cpp
xbrl-taxonomy-package-conformant-processor/src/helpers/: error_handler.cpp  logger.cpp  utils.cpp
